--- a/styles/Stylesheet.css
+++ b/styles/Stylesheet.css
@@ -24,6 +24,7 @@
     color: var(--color-textHeadLine);
     size: 16px;
     font-weight: bold;
+    margin-top: 40px;
 }
 
 article{
@@ -32,9 +33,15 @@ article{
     border-color: var(--color-border);
 }
 
+body {
+    padding: 141px 0px 0px 0px;
+}
+
 h1 {
     size: 36px;
     font-weight: bold;
+    margin-bottom: 40px;
+
 }
 
 h2 {
