--- a/styles/Stylesheet.css
+++ b/styles/Stylesheet.css
@@ -1,6 +1,8 @@
 *{
     margin : 0;
     padding: 0;
+        box-sizing: border-box;
+
 }
 
 :root {
@@ -31,35 +33,44 @@ article{
     border-top-style : solid;
     border-bottom-style : solid;
     border-color: var(--color-border);
+    margin-bottom: 40px;
+}
+
+#About{
+    margin-bottom: 80px;
 }
 
 body {
-    padding: 141px 0px 0px 0px;
+    padding: 141px 0 0 0;
+    margin: 0 auto;
+    margin-bottom: 100px;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
 }
 
 h1 {
-    size: 36px;
+    font-size: 36px;
     font-weight: bold;
     margin-bottom: 40px;
-
 }
 
 h2 {
-    size: 32px;
+    font-size: 32px;
     font-weight: bold;
 }
 
 h3 {
-    size: 28px;
+    font-size: 28px;
     font-weight: bold;
 }
 
-p{
-    size: 16px;
+p, .subtitle, .HeadLine {
+    font-size: 16px;
 }
 
 #historia{
-    color: var(--color-accentBlue);
+    color: var(--color-accentBlue) !important;
 }
 
 #casais{
@@ -72,12 +83,44 @@ p{
     color: var(--color-accentOrange);
 }
 
+section{
+    margin-bottom: 40px;
+}
+
+.BomPara{
+    margin: 20px 0;
+}
+
+.BomPara ul{
+    margin-left: 20px;
+}
+
+footer {
+    margin: 60px 60px 0 0;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    display: flex;
+    gap: 8px;
+    
+}
+
 .subtitle {
     size: 16px;
     font-weight: italic;
 }
 
 
+
 img {
+    width: 100%;
+    height: auto;
     border-radius: 28px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.icon {
+    width: 20px;
+    height: auto;
 }
